# backend/server.py
@@ -1,6 +1,8 @@
 from fastapi import FastAPI, APIRouter
 from routers.fridge import fridgeRouter as fr
-from classes.Item import Item, Base
+from classes.Base import Base
+from classes.Category import Category
+from classes.Item import Item
 from database import engine
 
 Base.metadata.create_all(engine)
